mvc kinda workiiing

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.contextPath = /
 
 # Port
 server.port=8090
+
+spring.view.prefix=templates
+spring.view.suffix=html
+spring.thymeleaf.mode=LEGACYHTML5
