--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
@@ -2,7 +2,11 @@
 server.contextPath = /
 
 # Port
-server.port=8090
+server.port : 8090  
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: fiiadmission-2017
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: fiiadmission
 
 spring.view.prefix=templates
 spring.view.suffix=html
