--- a/Integration/Mare_Proiect/middleware/src/main/resources/application.properties
+++ b/Integration/Mare_Proiect/middleware/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port = ${port:8081}
+server.port=${port:8081}
+spring.http.multipart.max-file-size=12MB
+spring.http.multipart.max-request-size=12MB
