munca la formuri + faza cu post maxim

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.ssl.keyAlias: fiiadmission
 spring.view.prefix=templates
 spring.view.suffix=html
 spring.thymeleaf.mode=LEGACYHTML5
+
+spring.http.multipart.max-file-size=12MB
+spring.http.multipart.max-request-size=12MB
