--- a/Integration/Mare_Proiect/spring-boot/pom.xml
+++ b/Integration/Mare_Proiect/spring-boot/pom.xml
@@ -24,7 +24,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.2.10.FINAL</version>
-        </dependency>
+        </dependency>		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
