--- a/Integration/Mare_Proiect/spring-boot/pom.xml
+++ b/Integration/Mare_Proiect/spring-boot/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
