--- a/Integration/Mare_Proiect/spring-boot/pom.xml
+++ b/Integration/Mare_Proiect/spring-boot/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
