AdminMaker + new user account

--- a/.gitignore
+++ b/.gitignore
@@ -127,4 +127,4 @@ dist/
 nbdist/
 .nb-gradle/
 
-#Integration\Mare_Proiect\spring-boot\FiiAdmission.db
+### Integration\Mare_Proiect\spring-boot\FiiAdmission.db
