--- a/Integration/Mare_Proiect/spring-boot/pom.xml
+++ b/Integration/Mare_Proiect/spring-boot/pom.xml
@@ -40,6 +40,18 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <!-- DynamicReports -->
+        <dependency>
+            <groupId>net.sourceforge.dynamicreports</groupId>
+            <artifactId>dynamicreports-core</artifactId>
+            <version>3.1.3</version>
+        </dependency>
+        <!--Apache POI for Excel-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
