removed iml & db from db

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ dist/
 nbdist/
 .nb-gradle/
 *.iml
+
+Integration/Mare_Proiect/FII-ADMISSION/view-controller.iml
+Integration/Mare_Proiect/spring-boot/FiiAdmission.db
